# werewolf

./: .gitignore  .pre-commit-config.yaml  .prettierrc  AGENT.md  LICENSE.md  PR_DESCRIPTION.md  README.md  README_GCP.md  REVIEW.md  docker-compose.yaml  verification_report.txt  verify_integration.py
.Jules/: bolt.md  palette.md
.github/workflows/: build-publish.yml  cleanup-preview.yml  deploy-prod.yml  lint.yml  preview-env.yml  tag-version.yml
.jules/: bolt.md
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/app/: main.py
backend/app/api/routers/: rooms.py  websocket.py
backend/app/core/: config.py  exceptions.py  logging.py  redis.py
backend/app/models/: game.py  phases.py  player.py  roles.py
backend/app/schemas/: game.py  socket.py
backend/app/services/: game_service.py  websocket_manager.py
backend/tests/: test_advanced_roles.py  test_features.py  test_fixes.py  test_game_logic.py  test_game_service.py  test_lovers_win.py  test_new_roles.py  test_role_balance.py  test_settings_update.py  test_witch_consensus.py
frontend/: .prettierrc  Dockerfile  eslint.config.js  index.html  nginx.conf  nginx.conf.template  package-lock.json  package.json  vite.config.ts
frontend/public/: manifest.json
frontend/public/sounds/: CREDITS.md
frontend/src/: App.tsx  config.ts  index.css  types.ts
frontend/src/api/: client.ts
frontend/src/components/: CreditsModal.tsx  (+14 more)
k8s/: backend.yaml  frontend.yaml  redis.yaml
scripts/: bootstrap_gcp.sh  deploy-cloud-run.sh  deploy_infra.sh  destroy_infra.sh  start_compose.sh  start_local.sh  verify_game_flow.py
terraform/: cloud_run.tf  compute.tf  iam.tf  main.tf  network.tf  registry.tf  variables.tf
terraform/preview/: main.tf  variables.tf
(+31 files in other folders)
